...
        tabBarActiveTintColor: "#ea580c",
      }}
    >
      <Tabs.Screen
        name="projects"
        options={{
          title: "Projects",
          tabBarLabel: "Projects",
        }}
      />
      <Tabs.Screen
        name="account"
        options={{
...
